--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "chai": "^3.5.0",
     "debug": "^2.2.0",
     "grunt": "^1.0.1",
-    "grunt-develop": "^0.4.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "request": "^2.60.0",
-    "time-grunt": "^1.2.1",
+    "grunt-develop": "^0.4.0",
     "load-grunt-tasks": "^3.2.0",
     "mocha": "^3.0.2",
     "nyc": "^10.0.0",
-    "supertest": "^2.0.0"
+    "request": "^2.60.0",
+    "supertest": "^2.0.0",
+    "time-grunt": "^1.2.1"
   }
 }
